# Study

./: .gitignore  List.sln  Односвязный список.sln
List/: List.vcxproj  List.vcxproj.filters  ListTestCase.cpp  ListTestCase.h  list.cpp  list.h  main.cpp
lib/: cppunitd_dll.lib
task1/: CMakeLists.txt  List.sln
task1/List/: List.filters  List.vcxproj  List.vcxproj.filters  ListTestCase.cpp  ListTestCase.h  list.cpp  list.h
Односвязный список/: ListList.cpp  list.cpp  list.h  main.cpp  Односвязный список.cpp  Односвязный список.vcxproj  Односвязный список.vcxproj.filters
